<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.projectno3.fifth_lay">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/gw1" />

    <Button
        android:id="@+id/next1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/next1"
        android:onClick="next_5"
        android:background="#AED581"
        >

    </Button>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q4"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/first_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="44dp"
        android:text="@string/dogs" />

    <CheckBox
        android:id="@+id/second_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/first_c"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp"
        android:layout_toEndOf="@+id/first_c"
        android:layout_toRightOf="@+id/first_c"
        android:text="@string/cats" />

    <CheckBox
        android:id="@+id/third_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/next1"
        android:layout_alignRight="@+id/next1"
        android:layout_alignTop="@+id/second_c"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:text="@string/pigs" />

    <CheckBox
        android:id="@+id/fourth_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/linearLayout"
        android:layout_alignRight="@+id/linearLayout"
        android:layout_alignTop="@+id/third_c"
        android:text="@string/bears" />

    <CheckBox
        android:id="@+id/fifth_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/second_c"
        android:layout_alignStart="@+id/second_c"
        android:layout_below="@+id/second_c"
        android:layout_marginTop="13dp"
        android:text="@string/nothing" />

</RelativeLayout>
